--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.5",
+    "vue3-lazyload": "^0.2.2-beta",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
